Bug 80101 - CRASH Calc terminates after inserting a chart from a text file
Summary: CRASH Calc terminates after inserting a chart from a text file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.5.3 release
Hardware: Other All
: high major
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0 target:4.3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-16 17:42 UTC by Christopher Yeleighton
Modified: 2014-10-08 15:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2014-06-16 17:42:17 UTC
Problem description: 

Steps to reproduce:
1. Tell Calc to insert a chart from file "file:///usr/share/doc/packages/libreoffice-templates-en/README.txt"

Current behavior:

Calc disappears, reporting a message to standard error:
terminate called after throwing an instance of 'com::sun::star::embed::NoVisualAreaSizeException'

Expected behavior:
Calc should not allow to insert a chart from a file that is not a chart.
Operating System: openSUSE
Version: 4.1.5.3 release
Comment 1 Florian Reisinger 2014-06-23 13:08:34 UTC
Hi,

Can reproduce with:

Version: 4.4.0.0.alpha0+
Build ID: bdd87b2acddb2e244569dcc8f228e270614dc59e
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-23_00:37:24

Insert -> Object -> Chart from file
Comment 3 Eike Rathke (retired, only occasionally showing up) 2014-10-08 15:09:25 UTC
On 4-3 http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-4-3&id=cd603063f44c152bbc3a1f3eb3796722eb422c0e