Resolves: fdo#80101 inserting non-chart as chart -> unhandled exception

Change-Id: I4d5438292d9a5c49f1336304ebd3dc4e155dd212